<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:themes="http://schemas.android.com/tools"
    android:layout_marginLeft="@dimen/item_margin_side"
    android:layout_marginRight="@dimen/item_margin_side"
    android:layout_marginTop="@dimen/item_margin_top"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--suppress AndroidLintContentDescription -->
        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:background="@drawable/empty_detail"
            android:transitionName="@string/transitionname_photo"/>


        <TextView
            android:id="@+id/article_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:maxLines="3"
            android:transitionName="@string/transitionname_title"/>

        <TextView
            android:id="@+id/article_subtitle"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textColor="@android:color/white"
            themes:text="Hello World"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:transitionName="@string/transitionname_subtitle"/>
    </FrameLayout>

</android.support.v7.widget.CardView>
