<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/anchor"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent"
        android:background="#bdbdbd"
        android:nestedScrollingEnabled="true">



        <TextView
            android:id="@+id/article_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:text="@string/cupcake_ipsum"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />



    </ScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="?colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom|left"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ebooks"
                    android:transitionName="@string/transitionname_photo"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/article_byline"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right|top"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:lines="2"
                    tools:text="12.2.2004\nby Cory Doctorow"
                    android:textSize="20dp" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab"
        android:stateListAnimator="@anim/fab_state_list_anim"
        android:background="@drawable/add_fab_background"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_share"
        android:elevation="@dimen/fab_elevation"
        android:contentDescription="@string/action_share" />

</android.support.design.widget.CoordinatorLayout>
